<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/loginPageBackgroundColor">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/need_an_account_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_noAccount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.33"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/welcome_iv"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:contentDescription="@string/welcome_description"
                android:scaleType="fitCenter"
                android:src="@drawable/welcome_android"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/need_an_account_tv" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_ti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/username"
                app:counterMaxLength="32"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/welcome_iv">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/password"
                app:errorEnabled="true"
                app:layout_constraintLeft_toLeftOf="@id/username_ti"
                app:layout_constraintStart_toStartOf="@id/username_ti"
                app:layout_constraintTop_toBottomOf="@id/username_ti">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_in_btn"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_in_short"
                app:cornerRadius="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_text_input" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_up_btn"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/action_sign_up"
                app:layout_constraintBottom_toBottomOf="@id/need_an_account_tv"
                app:layout_constraintStart_toEndOf="@+id/need_an_account_tv"
                app:layout_constraintTop_toTopOf="@+id/need_an_account_tv" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
